--- a/JSアプリ/MyStopwatch/index.html
+++ b/JSアプリ/MyStopwatch/index.html
@@ -5,8 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ストップウォッチ</title>
   </style>
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
+  <div id="timer">00:00.000</div>
+  <button id="start">Start</button>
+  <button id="stop">Stop</button>
+  <button id="reset">Reset</button>
+
   <script src="js/main.js"></script>
 </body>
 </html>
