--- a/JSアプリ/MyTypingGame/index.html
+++ b/JSアプリ/MyTypingGame/index.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>TypingGame</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <p id="target">word</p>
+  <p class="info">
+    Letter count: <span id="score">0</span>,
+    Miss count: <span id="miss">0</span>
+  </p>
   
   <script src="js/main.js"></script>
 </body>
