--- a/JSアプリ/MyQuizGame/index.html
+++ b/JSアプリ/MyQuizGame/index.html
@@ -9,11 +9,7 @@
 <body>
   <section class="container">
     <p id="question">What is A?</p>
-    <ul id="choices">
-      <li>A0</li>
-      <li>A1</li>
-      <li>A2</li>
-    </ul>
+    <ul id="choices"></ul>
     <div id="btn" class="disabled">Next</div>
   </section>
   <script src="js/main.js"></script>
