--- a/JSアプリ/MyQuizGame/index.html
+++ b/JSアプリ/MyQuizGame/index.html
@@ -11,6 +11,10 @@
     <p id="question">What is A?</p>
     <ul id="choices"></ul>
     <div id="btn" class="disabled">Next</div>
+    <section id="result" class="hidden">
+      <p></p>
+      <a href="">Replay?</a>
+    </section>
   </section>
   <script src="js/main.js"></script>
 </body>
