--- a/CSSアプリ/csschat/index.html
+++ b/CSSアプリ/csschat/index.html
@@ -7,6 +7,33 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <div class="container">
+    <ul class="messages">
+      <li>
+        <div class="pic">
+          <img src="img/cat.png">
+        </div>
+        <div class="text">
+          こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。
+        </div>
+      </li>
+      <li>
+        <div class="pic">
+          <img src="img/dog.png">
+        </div>
+        <div class="text">
+          お久しぶりです！
+        </div>
+      </li>
+      <li>
+        <div class="pic">
+          <img src="img/cat.png">
+        </div>
+        <div class="text">
+          こんにちは。こんにちは。
+        </div>
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
