--- a/JSアプリ/MyCalendar/index.html
+++ b/JSアプリ/MyCalendar/index.html
@@ -26,18 +26,9 @@
     </thead>
     <tbody>
       <tr>
-        <td>1</td>
-        <td>1</td>
-        <td>1</td>
-        <td>1</td>
-        <td>1</td>
-        <td>1</td>
-        <td>1</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>1</td>
-        <td>1</td>
+        <td class="disabled">1</td>
+        <td class="disabled">1</td>
+        <td class="disabled">1</td>
         <td>1</td>
         <td>1</td>
         <td>1</td>
@@ -54,12 +45,21 @@
       </tr>
       <tr>
         <td>1</td>
+        <td class="today">1</td>
         <td>1</td>
         <td>1</td>
         <td>1</td>
         <td>1</td>
         <td>1</td>
+      </tr>
+      <tr>
         <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td>1</td>
+        <td class="disabled">1</td>
+        <td class="disabled">1</td>
+        <td class="disabled">1</td>
       </tr>
     </tbody>
     <tfoot>
